# warehouse-planner-mvp

./: .gitignore  CLAUDE.md  PLAN.md  README.md  prd.md  pyproject.toml  requirements.txt
.claude/: settings.local.json
configs/clients/: _template.yaml  example_client.yaml
configs/locales/: en.yaml  es.yaml
data/: example_client.csv
data/sample/: synthetic_volumes.csv
src/hireplanner/config/: client_config.py  i18n.py
src/hireplanner/forecasting/: ensemble.py  lightgbm_model.py
src/hireplanner/ingestion/: __init__.py  cleaner.py  loader.py  validator.py
src/hireplanner/metrics/: accuracy_tracker.py  evaluation.py
src/hireplanner/pipeline/: runner.py
src/hireplanner/planning/: alerts.py  backlog.py  labor.py
src/hireplanner/reporting/: charts.py  excel_generator.py  formatters.py  markdown_generator.py  matplotlib_charts.py
tests/: conftest.py
tests/test_config/: test_client_config.py  test_i18n.py
tests/test_forecasting/: test_ensemble.py  test_lightgbm.py
tests/test_ingestion/: test_cleaner.py  test_loader.py  test_validator.py
tests/test_metrics/: test_accuracy_tracker.py  test_evaluation.py
tests/test_pipeline/: test_runner.py
tests/test_planning/: test_alerts.py  test_backlog.py  test_labor.py
tests/test_reporting/: test_excel_generator.py  test_markdown_generator.py  test_matplotlib_charts.py
